2005-04-04  Dan Winship  <danw@novell.com>

	* libstetic/PropertyDescriptor.cs (GladeName): fix for proxied
	properties so that MnemonicWidget works right.

	* libstetic/wrapper/Button.cs (ConstructChild): Fix so that stock
	icons always UseUnderline

	* libstetic/wrapper/Container.cs (FindInternalChild): No need to
	recurse upward here any more. Also, return the wrapper rather than
	the child.
	(GladeSetInternalChild): don't create a wrapper here, since the
	widget must already have one.
	(Select): add a workaround for when you select a widget that isn't
	mapped.

	* libstetic/wrapper/OptionMenu.cs (Wrap): create a wrapper for the
	menu.
	(GladeSetInternalChild): override this, since the menu (which
	glade considers to be an internal child of the optionmenu) is not
	actually a real child.

	* libstetic/wrapper/Widget.cs (FindWrapper): don't find widgets
	that aren't mapped.
	(HasDefault, HierarchyChanged): Fix the logic here; a widget
	always has a "Toplevel", it's just that the Toplevel is not always
	actually a toplevel widget.

	* libstetic/wrapper/Window.cs (Select): Show() the window when it
	is selected.

2005-03-29  Dan Winship  <danw@novell.com>

	* libstetic/HandleWindow.cs (SelectionEvent): simplify for gdk#
	changes

	* libstetic/editor/Image.cs: Use reflection to get the list of
	stock IDs rather than Gtk.Stock.ListIds, since the latter will
	return 2.6-specific IDs if you have libgtk 2.6.
	(Image): pack the combobox into a vbox so it won't expand
	incorrectly.
	
	* libstetic/wrapper/ButtonBox.cs (GladeImportChild): fix
	ResponseId handling.

	* libstetic/wrapper/Container.cs (Select, UnSelect): virtualize
	(Delete): new method to delete a widget and replace it with a
	Placeholder.

	* libstetic/wrapper/Label.cs (Label (string)): pass "true" to Wrap
	so it doesn't bash the passed-in label string

	* libstetic/wrapper/Notebook.cs (GladeImportChild, InsertPage):
	Remove FIXMEs.
	(GladeExportChild): fix a leftover WidgetSiteism.